# llm_adsorbate

./: .gitignore  README.md  fairchem.md  generate_slabs.py  launch.sh  pyproject.toml
benchmark_slabs/: 02_Mo3Pd_111.xyz  03_Pd3Cu_111.xyz  05_Cu3Ag_111.xyz  07_Ru3Mo_111.xyz  09_Pt_111.xyz  10_Pt_100.xyz  11_mp-2_OH.xyz  12_mp-81_OH.xyz  13_mp-124_OH.xyz  14_CoPt_111.xyz  15_mp-865798_CH2CH2OH.xyz  16_mp-1018153_CH2CH2OH.xyz  17_Rh2Ti2_111.xyz  18_Al3Zr_101.xyz  19_mp-866108_OCHCH3.xyz  20_mp-866201_ONN(CH3)2.xyz  CuZnO.xyz
docs/: calculator_backends.md  llm_backends.md  quickstart.md
notebooks/: CuZnO_slab.xyz
src/agent/: agent.py  prompts.py
src/app/: app.py
src/calculators/: __init__.py  base.py  factory.py  mace_backend.py  openmd_backend.py
src/llms/: __init__.py  base.py  factory.py  google_backend.py  huggingface_backend.py  ollama_backend.py  openrouter_backend.py
src/tools/: tools.py
src/utils/: config.py  logger.py
tests/: test_llm_backends.py  test_structure_formats.py
